# Pylux

./: CMakeLists.txt  README.md
.github/workflows/: deploy-flatpak.yml  deploy-macos.yml  release-all.yml
android/: gradle.properties
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/metallic/chiaki/cloudplay/: CloudLocale.kt  CloudLocaleBootstrap.kt
android/app/src/main/java/com/metallic/chiaki/cloudplay/api/: CloudStreamingBackend.kt  PSGaikaiStreaming.kt  PSKamajiSession.kt  PsCloudCatalogService.kt  PsCloudOwnership.kt  PsnCatalogService.kt
android/app/src/main/java/com/metallic/chiaki/cloudplay/model/: CloudGame.kt
android/app/src/main/java/com/metallic/chiaki/cloudplay/repository/: CloudGameRepository.kt
android/app/src/main/java/com/metallic/chiaki/common/: Preferences.kt
android/app/src/main/java/com/metallic/chiaki/main/: CloudGameAdapter.kt  CloudPlayFragment.kt  CloudPlayViewModel.kt
android/app/src/main/java/com/metallic/chiaki/settings/: SettingsFragment.kt
android/app/src/main/java/com/metallic/chiaki/stream/: StreamActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: preferences.xml
docs/setup/: installation.md
gui/: CMakeLists.txt  io.github.ForWard_Technologies_LLC.Pylux.metainfo.xml
gui/include/: appreviewmanager.h  cloudcatalogbackend.h  donationmanager.h  qmlsettings.h  settings.h
gui/src/: appreviewbridge.mm  appreviewmanager.cpp  cloudcatalogbackend.cpp  cloudstreamingbackend.cpp  qmlbackend.cpp  qmlsettings.cpp  settings.cpp
gui/src/cloudstreaming/: psgaikaistreaming.cpp  pskamajisession.cpp
gui/src/qml/: CloudGameCard.qml  CloudPlayView.qml  GamingModeAddedDialog.qml  QRLoginDialog.qml  SettingsDialog.qml
ios/Pylux.xcodeproj/: project.pbxproj
ios/Pylux/App/: PyluxAppDelegate.swift
ios/Pylux/Models/: CloudModels.swift
ios/Pylux/Services/: AppReviewHelper.swift  CloudCatalogService.swift  CloudStreamingBackend.swift  PSGaikaiStreaming.swift  PSKamajiSession.swift  PsCloudOwnership.swift  SecureStore.swift
ios/Pylux/Views/: CloudPlayView.swift  SettingsView.swift
scripts/flatpak/: io.github.ForWard_Technologies_LLC.Pylux.yml
